2008-04-21  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/apt-worker.cc (find_catalogues_for_item_desc): Return a
	GList of catalogues matching the item's URI instead of just one
	element, cause one error could belong to several items (N84465).
	(update_package_cache): Look for a list of catalogues matching a
	failing URI to properly add each error to all of them (N84465).

2008-04-17  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/util.cc (start_entertaining_user): Use GDK hints instead of
	gtk_widget_set_size_request for setting a fixed width for the
	dialog, since it behaves better when it's needed for the dialog
	to both grow and shrink as the main label changes (N83057)

2008-04-16  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/apt-worker.cc (rescue_operation_with_dir): Call DumpErrors
	to prevent pending errors to leak into the next operation.

2008-04-16  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/util.cc (ENTERTAINMENT_DIALOG_MIN_WIDTH): Removed.
	(ENTERTAINMENT_DIALOG_MAX_WIDTH): Removed.
	(ENTERTAINMENT_LABEL_MAX_WIDTH): Removed.
	(ENTERTAINMENT_DIALOG_WIDTH): New, used to set a fixed size for
	entertainment dialogs.
	(entertainment_update_title): Removed code for rezizing the dialog
	or ellipsizing the text depending on the final length of the text
	to be shown as the main label.
	(start_entertaining_user): Removed code for resizing the dialog or
	ellipsizing the text of the main label, and just set the dialog
	width to a fixed size (550px), and activated the "line wrap" mode
	for such that label.

2008-04-15  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/settings.h, src/settings.cc (red_pill_check_always): New.
	Handle it in all the right places.
	(make_settings_tab): Put the settings in a scrolled window.
	* src/main.cc (maybe_refresh_package_cache_without_user): Always
	call refresh_package_cache_without_user in blue-pill mode, but use
	red_pill_check_always in red-pill mode to determine whether to
	call it (N83308).